--- a/download.html
+++ b/download.html
@@ -24,8 +24,10 @@
 <body>
     <div id="release-info1"></div>
     <div id="release-info2"></div>
+    <div id="release-info3"></div>
+    <div id="release-info4"></div>
+    <div id="release-info5"></div>
 
-    <!-- JavaScriptファイルの読み込み -->
     <script src="script.js"></script>
 </body>
 </html>
