--- a/download.html
+++ b/download.html
@@ -5,6 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Releases</title>
+        <style>
+        .release-info {
+            display: flex;
+            align-items: center;
+        }
+
+        .download-info {
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
+        }
+
+        .download-button {
+            margin-left: 10px;
+        }
+    </style>
     <style>
         .title-animation {
             animation: titleBounce 0.5s ease infinite alternate; /* アニメーションを適用 */
