--- a/Sanka.html
+++ b/Sanka.html
@@ -8,7 +8,7 @@
         #notification {
             display: none;
             position: fixed;
-            bottom: 20px;
+            top: -100px; /* 初期状態で上に隠しておく */
             left: 50%;
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.8);
@@ -16,11 +16,25 @@
             padding: 10px 20px;
             border-radius: 5px;
             z-index: 1000;
+            transition: top 0.5s ease; /* スライドダウンのトランジション */
+        }
+        #notification button {
+            margin-top: 10px;
+            padding: 5px 10px;
+            background-color: #ffffff;
+            color: #000000;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div id="notification">このショートカットは無効化されています。</div>
+    <div id="notification">
+        <span id="notification-message">このショートカットは無効化されています。</span>
+        <br>
+        <button id="notification-close">OK</button>
+    </div>
     <script>
         let akaina = 'ここに追加の情報を記述';
 
@@ -33,13 +47,19 @@
 
         function showNotification(message) {
             const notification = document.getElementById('notification');
-            notification.textContent = message;
+            const notificationMessage = document.getElementById('notification-message');
+            notificationMessage.textContent = message;
             notification.style.display = 'block';
+            notification.style.top = '20px'; // 通知を表示する位置に設定
+        }
 
+        document.getElementById('notification-close').addEventListener('click', function() {
+            const notification = document.getElementById('notification');
+            notification.style.top = '-100px'; // 通知を上に隠す位置に戻す
             setTimeout(() => {
                 notification.style.display = 'none';
-            }, 3000); // 3秒後に通知を非表示にする
-        }
+            }, 500); // トランジションの時間と合わせる
+        });
     </script>
 </body>
 </html>
