--- a/Sanka.html
+++ b/Sanka.html
@@ -42,10 +42,10 @@
         #notification button:hover {
             opacity: 0.8; /* ホバー時に透明度を下げて少し暗くする */
         }
-        @keyframes catWalk {
-            0% { background-position: 0 0; }
-            100% { background-position: 100% 0; }
-        }
+    @keyframes catWalk {
+        0% { background-position: left top; }
+        100% { background-position: right top; }
+    }
     </style>
 </head>
 <body>
