--- a/Sanka.html
+++ b/Sanka.html
@@ -26,7 +26,7 @@
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* テキストの周りを明るくする */
         }
         #notification button {
-        　　color: white; /* テキストの色を白に設定 */
+        　　color: #e6e6fa; /* テキストの色を白に設定 */
             margin-top: 10px;
             padding: 10px 20px; /* ボタンのパディングを増やす */
             background-color: transparent;
