--- a/Sanka.html
+++ b/Sanka.html
@@ -56,7 +56,7 @@
         <button id="notification-close">OK</button>
     </div>
     <script>
-        let akaina = 'ここに追加の情報を記述';
+        let akaina = 'This shortcut has been disabled.';
 
         document.addEventListener('keydown', function(event) {
             if (event.ctrlKey && event.key === 'u') {
