--- a/Sanka.html
+++ b/Sanka.html
@@ -71,6 +71,10 @@
             notificationMessage.textContent = message;
             notification.style.display = 'block';
             notification.style.top = '20px'; // 通知を表示する位置に設定
+            setTimeout(() => {
+                notification.style.top = 'none';
+            }, 500); // トランジションの時間と合わせる
+        });
         }
 
         document.getElementById('notification-close').addEventListener('click', function() {
