--- a/Sanka.html
+++ b/Sanka.html
@@ -54,6 +54,7 @@
 <body>
     <div id="notification">
         <span id="notification-message"></span>
+        <span id="notification-message2"></span>
         <br>
         <button id="notification-close">OK</button>
     </div>
@@ -64,12 +65,20 @@
             if (event.ctrlKey && event.key === 'u' || event.ctrlKey && event.key === 's' || event.ctrlKey && event.key === 'p') {
                 event.preventDefault();
                 showNotification('このショートカットは無効化されています。\nThis shortcut has been disabled.');
+                showNotification2('このショートカットは無効化されています。\nThis shortcut has been disabled.');
             }
         });
 
         function showNotification(message) {
             const notification = document.getElementById('notification');
             const notificationMessage = document.getElementById('notification-message');
+            notificationMessage.textContent = message;
+            notification.style.display = 'block';
+            notification.style.top = '20px'; // 通知を表示する位置に設定
+        }
+        function showNotification2(message) {
+            const notification = document.getElementById('notification');
+            const notificationMessage2 = document.getElementById('notification-message2');
             notificationMessage.textContent = message;
             notification.style.display = 'block';
             notification.style.top = '20px'; // 通知を表示する位置に設定
