--- a/Sanka.html
+++ b/Sanka.html
@@ -54,7 +54,7 @@
 <body>
     <div id="notification">
         <span id="notification-message"></span>
-        <span id="notification-message2">This shortcut has been disabled.</span>
+        <a>This shortcut has been disabled.</a>
         <br>
         <button id="notification-close">OK</button>
     </div>
