--- a/Sanka.html
+++ b/Sanka.html
@@ -53,8 +53,9 @@
 </head>
 <body>
     <div id="notification">
-        <span id="notification-message"></span>
-        <a>This shortcut has been disabled.</a>
+        <span id="notification-message"></span> 
+        <br>
+        <span id="notification-message2">This shortcut has been disabled.</span>
         <br>
         <button id="notification-close">OK</button>
     </div>
