--- a/Sanka2.html
+++ b/Sanka2.html
@@ -6,19 +6,22 @@
     <title>BGM自動再生テスト</title>
 </head>
 <body>
-    <script>
-window.addEventListener('DOMContentLoaded', function() {
-  const audioElement = document.createElement('audio');
-  audioElement.src = './bgm.mp3';
-  audioElement.loop = true; // ループ再生する場合
-　audioElement.volume = 0.7; // 音量を70に設定
-  document.body.appendChild(audioElement);
 
-  audioElement.autoplay = true;
-  audioElement.play().catch(error => {
-    console.log('自動再生がブロックされました:', error);
-  });
-});
-    </script>
+      <script>
+    window.addEventListener('DOMContentLoaded', function() {
+      const audioElement = document.createElement('audio');
+      audioElement.src = './bgm.mp3';
+      audioElement.loop = true; // ループ再生する場合
+      audioElement.volume = 0.7; // 音量を70に設定
+      document.body.appendChild(audioElement);
+
+      // ユーザーのクリックイベントを待ってから再生を開始
+      document.body.addEventListener('click', function() {
+        audioElement.play().catch(error => {
+          console.log('オーディオの再生に失敗しました:', error);
+        });
+      }, { once: true }); // 一度だけイベントを実行する
+    });
+  </script>
 </body>
 </html>
