--- a/Sanka2.html
+++ b/Sanka2.html
@@ -24,5 +24,26 @@
     });
 
   </script>
+      <script>
+    window.addEventListener('DOMContentLoaded', function() {
+      const audioElement = document.createElement('audio');
+      audioElement.src = 'bgm.mp3';
+      audioElement.loop = true; // ループ再生する場合
+      audioElement.volume = 0.7; // 音量を70に設定
+      document.body.appendChild(audioElement);
+
+      // ユーザーのタッチイベントを待ってから再生を開始
+      function playAudio() {
+        audioElement.play().catch(error => {
+          console.log('オーディオの再生に失敗しました:', error);
+        });
+        document.body.removeEventListener('click', playAudio);
+        document.body.removeEventListener('touchstart', playAudio);
+      }
+
+      document.body.addEventListener('click', playAudio);
+      document.body.addEventListener('touchstart', playAudio);
+    });
+  </script>
 </body>
 </html>
