--- a/Sanka2.html
+++ b/Sanka2.html
@@ -6,8 +6,8 @@
   <title>Audio Autoplay Example</title>
 </head>
 <body>
-  <h1>タッチしてオーディオを再生</h1>
-  <p>このページをタッチまたはクリックするとオーディオが再生されます。</p>
+  <h1>クリックしてオーディオを再生</h1>
+  <p>このページをクリックするとオーディオが再生されます。</p>
 
   <script>
     window.addEventListener('DOMContentLoaded', function() {
@@ -15,7 +15,7 @@
       audioElement.loop = true; // ループ再生する場合
       audioElement.volume = 0.7; // 音量を70に設定
 
-      // ユーザーのタッチまたはクリックイベントを待ってから再生を開始
+      // ページをクリックしたときにオーディオを再生
       function playAudio() {
         audioElement.play().then(() => {
           console.log('オーディオが再生されました');
@@ -23,13 +23,11 @@
           console.log('オーディオの再生に失敗しました:', error);
         });
 
-        // 一度再生が開始されたらイベントリスナーを削除
+        // イベントリスナーを削除
         document.body.removeEventListener('click', playAudio);
-        document.body.removeEventListener('touchstart', playAudio);
       }
 
       document.body.addEventListener('click', playAudio);
-      document.body.addEventListener('touchstart', playAudio);
     });
   </script>
 </body>
