--- a/Sanka2.html
+++ b/Sanka2.html
@@ -9,7 +9,7 @@
   <h1>音楽を再生する</h1>
   
   <!-- 音楽プレーヤー -->
-  <audio id="musicplayer">
+  <audio id="musicplayer"　loop>
     <source src="https://akaina0112.github.io/Test/bgm.mp3" type="audio/mpeg">
     <!-- 必要に応じて他のフォーマットを追加 -->
     <!-- <source src="/music/chapter1.ogg" type="audio/ogg" /> -->
