--- a/Sanka2.html
+++ b/Sanka2.html
@@ -15,7 +15,7 @@
       color: white;
       padding: 10px 20px;
       border-radius: 5px;
-      display: none; /* 初期状態は非表示 */
+    //  display: none; /* 初期状態は非表示 */
     }
   </style>
 </head>
@@ -31,7 +31,7 @@
         audioElement.id = 'musicplayer';
         audioElement.loop = true;
         audioElement.volume = 0.5;
-        audioElement.controls = true;
+     //   audioElement.controls = true;
 
         const sourceElement = document.createElement('source');
         sourceElement.src = 'https://akaina0112.github.io/Test/bgm.mp3';
