--- a/Sanka2.html
+++ b/Sanka2.html
@@ -4,20 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music Player</title>
-  <style>
-    /* CSS */
-    #music-info {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-    //  display: none; /* 初期状態は非表示 */
-    }
-  </style>
 </head>
 <body>
   <h1>音楽を再生する</h1>
@@ -31,7 +17,7 @@
         audioElement.id = 'musicplayer';
         audioElement.loop = true;
         audioElement.volume = 0.5;
-     //   audioElement.controls = true;
+        audioElement.controls = true;
 
         const sourceElement = document.createElement('source');
         sourceElement.src = 'https://akaina0112.github.io/Test/bgm.mp3';
@@ -43,9 +29,33 @@
         // 音楽情報を表示する要素を作成
         const musicInfo = document.createElement('div');
         musicInfo.id = 'music-info';
-        musicInfo.textContent = '音楽名: Nightcore - Vicetone - Nevada '; // 音楽名を設定
+        musicInfo.textContent = '音楽名: Nightcore - Vicetone - Nevada'; // 音楽名を設定
         document.body.appendChild(musicInfo);
-        musicInfo.style.display = 'Nightcore - Vicetone - Nevada '; // 音楽名を表示
+
+        // CSSスタイルを動的に追加
+        const style = document.createElement('style');
+        style.textContent = `
+          #music-info {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+          }
+          #music-info.show {
+            opacity: 1;
+          }
+        `;
+        document.head.appendChild(style);
+
+        // 音楽情報の表示を通知風に
+        setTimeout(() => {
+          musicInfo.classList.add('show');
+        }, 100); // 少し遅延させて表示
 
         // 音楽を再生する
         audioElement.play().then(() => {
