--- a/Sanka2.html
+++ b/Sanka2.html
@@ -10,74 +10,76 @@
 
   <!-- JavaScript -->
   <script>
-    window.onload = function() {
-      function createAndPlayAudio() {
-        // 音楽プレーヤーを作成
-        const audioElement = document.createElement('audio');
-        audioElement.id = 'musicplayer';
-        audioElement.loop = true;
-        audioElement.volume = 0.5;
-        audioElement.controls = true;
+window.onload = function() {
+  // ページが読み込まれたときに実行される関数
+  function createAndPlayAudio() {
+    // 音楽プレーヤーを作成
+    const audioElement = document.createElement('audio');
+    audioElement.id = 'musicplayer';
+    audioElement.loop = true; // ループ再生
+    audioElement.volume = 0.5; // 音量設定
+    audioElement.controls = true; // コントロールを表示
 
-        const sourceElement = document.createElement('source');
-        sourceElement.src = 'https://akaina0112.github.io/Test/bgm.mp3';
-        sourceElement.type = 'audio/mpeg';
+    // 音楽ファイルの設定
+    const sourceElement = document.createElement('source');
+    sourceElement.src = 'https://akaina0112.github.io/Test/bgm.mp3';
+    sourceElement.type = 'audio/mpeg';
 
-        audioElement.appendChild(sourceElement);
-        document.body.appendChild(audioElement);
+    audioElement.appendChild(sourceElement); // <audio>要素に音楽ファイルを追加
+    document.body.appendChild(audioElement); // <body>要素に<audio>要素を追加
 
-        // 音楽情報を表示する要素を作成
-        const musicInfo = document.createElement('div');
-        musicInfo.id = 'music-info';
-        musicInfo.textContent = '音楽名: Nightcore - Vicetone - Nevada'; // 音楽名を設定
-        document.body.appendChild(musicInfo);
+    // 音楽情報を表示する要素を作成
+    const musicInfo = document.createElement('div');
+    musicInfo.id = 'music-info';
+    musicInfo.textContent = '音楽名: Nightcore - Vicetone - Nevada'; // 音楽名を設定
+    document.body.appendChild(musicInfo); // <body>要素に<div>要素を追加
 
-        // CSSスタイルを動的に追加
-        const style = document.createElement('style');
-        style.textContent = `
-          #music-info {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-          }
-          #music-info.show {
-            opacity: 1;
-          }
-        `;
-        document.head.appendChild(style);
-
-        // 音楽情報の表示を通知風に
-        setTimeout(() => {
-          musicInfo.classList.add('show');
-          console.log('音楽名を表示');
-        }, 100); // 少し遅延させて表示
-
-        // 5秒後に音楽情報を消す
-        setTimeout(() => {
-          musicInfo.classList.remove('show');
-          console.log('音楽名を消去');
-        }, 5100); // 5秒後に消えるように設定
-
-        // 音楽を再生する
-        audioElement.play().then(() => {
-          console.log('音楽が再生されました');
-        }).catch(error => {
-          console.log('音楽の再生に失敗しました:', error);
-        });
-
-        // イベントリスナーを削除（再生が開始されたら不要）
-        document.body.removeEventListener('click', createAndPlayAudio);
+    // CSSスタイルを動的に追加
+    const style = document.createElement('style');
+    style.textContent = `
+      #music-info {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 10px 20px;
+        border-radius: 5px;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
       }
+      #music-info.show {
+        opacity: 1;
+      }
+    `;
+    document.head.appendChild(style); // <head>要素に<style>要素を追加
 
-      // ページをクリックしたときに createAndPlayAudio 関数を実行
-      document.body.addEventListener('click', createAndPlayAudio);
-    };
+    // 音楽情報の表示を通知風に
+    setTimeout(() => {
+      musicInfo.classList.add('show'); // 'show'クラスを追加して表示
+      console.log('音楽名を表示');
+    }, 100); // 少し遅延させて表示（ミリ秒単位）
+
+    // 5秒後に音楽情報を消す
+    setTimeout(() => {
+      musicInfo.classList.remove('show'); // 'show'クラスを削除して非表示
+      console.log('音楽名を消去');
+    }, 5100); // 5秒後に消えるように設定（ミリ秒単位）
+
+    // 音楽を再生する
+    audioElement.play().then(() => {
+      console.log('音楽が再生されました');
+    }).catch(error => {
+      console.log('音楽の再生に失敗しました:', error);
+    });
+
+    // イベントリスナーを削除（再生が開始されたら不要）
+    document.body.removeEventListener('click', createAndPlayAudio);
+  }
+
+  // ページをクリックしたときに createAndPlayAudio 関数を実行
+  document.body.addEventListener('click', createAndPlayAudio);
+};
   </script>
 </body>
 </html>
