--- a/Sanka2.html
+++ b/Sanka2.html
@@ -18,7 +18,7 @@ window.onload = function() {
     audioElement.id = 'musicplayer';
     audioElement.loop = true; // ループ再生
     audioElement.volume = 0.5; // 音量設定
-    audioElement.controls = true; // コントロールを表示
+    //audioElement.controls = true; // コントロールを表示
 
     // 音楽ファイルの設定
     const sourceElement = document.createElement('source');
