--- a/Sanka2.html
+++ b/Sanka2.html
@@ -89,7 +89,7 @@ window.onload = function() {
       background.style.left = '0';
       background.style.width = '200%';
       background.style.height = '100vh';
-      background.style.background = 'url(\'./background.png\') repeat-x';
+      background.style.background = 'url('./background.png') repeat-x';
       background.style.animation = 'scrollBackground 60s linear infinite';
 
       // コンテンツ領域のスタイルをJavaScriptで設定する
